fixed buttons in feature section on tablet

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1591,7 +1591,7 @@ body {
     }
 
     @media only screen and (max-width: 600px) {
-      top: -130px;
+      top: -35px;
       left: -50px;
     }
   }
